fixed overflow

--- a/src/components/styles/freelancersStyles.scss
+++ b/src/components/styles/freelancersStyles.scss
@@ -2,7 +2,7 @@
     padding-left: 7rem;
     padding-top: 11.4rem;
     margin: auto;
-    margin-left: 25rem;
+    padding-left: 30rem;
     width: 100%;
     
     @media (max-width: 60em) {
@@ -27,7 +27,7 @@
         text-align: center;
     }
 
-    .freelancers_list {
+    .freelancers_list, .cards {
         display: flex;
         flex-wrap: wrap;
         column-gap: 3rem;
